--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 .tblNoBorder td   { border: 0; }
 
 
-// -->
 </style>
 
 </head>
@@ -133,7 +132,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 <table width="76%" border="0" align="center" valign="bottom" cellspacing="0" cellpadding="0">
 	<tr>
-	<td id="footer"><small>&copy; 2008 Xavier Roche & other contributors - Web Design: Leto Kauler.</small></td>
+	<td id="footer"><small>2021 EasyBd.</small></td>
 	</tr>
 </table>
 
