--- a/easyshop64.com/index.html
+++ b/easyshop64.com/index.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
-		<title>- Eapp24</title>
+		<title>- EasyBd</title>
 
 		<!-- All in One SEO 4.1.4.4 -->
 		<meta name="description" content="★ আমাদের আপডেট কাজ চলতেছে । আমাদের অধিক ব্যবহারকারী থাকার কারনে সাইট মাঝে মধ্যে একটু স্লো হতে পারে, আপনাদের কোথাও ব্যবহার করতে সমস্যা হলে বা না বুঝলে আমাদের সাথে যোগাযোগ করুন। 01811863236 ★ ☆ Easy Apps Option End ☆ 10 Visitor Update ★ আপনাদের কোম্পানির বা যে কোন সাইট এখানে যুক্ত করতে পারেন ও বিজ্ঞাপন… Read More »" />
